chore: CVE-2025-29927 fix

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "graphql-request": "^7.0.1",
     "js-base64": "^3.7.7",
     "js-cookie": "^3.0.5",
-    "next": "15.1.6",
+    "next": "^15.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.1.0",
