--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "js-base64": "^3.7.7",
     "js-cookie": "^3.0.5",
     "motion": "^12.19.1",
-    "next": "16.0.7",
+    "next": ">=16.1.5",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-icons": "^5.1.0",
